--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 
-<body style=" max-width: 280px;-webkit-border-radius: 5px;
+<body style=" max-width: 280px;
 margin: 0 auto;
 padding: 0;padding: 40px 20px 0 20px;@media only screen and (min-width:480px);max-width: 600px;">
 
@@ -50,9 +50,8 @@ padding: 0;padding: 40px 20px 0 20px;@media only screen and (min-width:480px);ma
     </div>
     </div>
     <div style="@media only screen and (min-width:480px)" class="body-text-header">
-        <h4 style="font-family: Tahoma; font-style: normal;font-size:16px; font-weight: bold;line-height: 20px;background: linear-gradient(90deg, #E0E0E0 0%, rgba(241, 241, 241, 0) 100%);
-           left: 15px;">EXTENDED BY POPULAR DEMAND
-        </h4>
+        <h4 style="font-family: Tahoma; font-style: normal;font-size:16px; font-weight: bold;line-height:20px;background: linear-gradient(90deg, #E0E0E0 0%, rgba(241, 241, 241, 0) 100%);left: 15px;">EXTENDED BY POPULAR DEMAND </h4>
+        
         <div style="@media only screen and (min-width:480px);" class="body_text">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Voluptates, libero rerum laudantium nobis
                 temporibus molestias placeat itaque laboriosam. Repellat magnam sequi voluptates ipsa impedit,
@@ -131,11 +130,11 @@ border: 2px solid #00B336;
 border-radius: 30px;float: right;" type="button">REGISTER NOW</button>
 
     </div>
-    <div style="@media only screen and (min-width:480px);width: 33.33%;" class="footer">
+    <div style="@media only screen and (min-width:480px)" class="footer">
         <div class="footer-header">
             <h3>Question? Contact your Veeam representative.</h3>
         </div>
-        <div class="footer-body">
+        <div style="@media only screen and (min-width:480px);width: 33.33%;" class="footer-body">
             <p>Happy selling!</p>
             <p>Veeam Team</p>
             <h3>Special conditions may apply. Visit the web pages to learn more.</h3>
