--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@ padding: 0;padding: 40px 20px 0 20px;@media only screen and (min-width:480px);ma
     </div>
     </div>
     <div style="@media only screen and (min-width:480px)" class="body-text-header">
-        <h4 style="font-family: Tahoma; font-style: normal;font-size:16px; font-weight: bold;line-height:20px;background: linear-gradient(90deg, #E0E0E0 0%, rgba(241, 241, 241, 0) 100%);left: 15px;">EXTENDED BY POPULAR DEMAND </h4>
-        
+        <h4 style="font-family: Tahoma; font-style: normal;font-size:16px; font-weight: bold;padding:20px;line-height: 20px;background: linear-gradient(90deg, #E0E0E0 0%, rgba(241, 241, 241, 241) 100%);
+        left: 15px;">EXTENDED BY POPULAR DEMAND </h4>
+
         <div style="@media only screen and (min-width:480px);" class="body_text">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Voluptates, libero rerum laudantium nobis
                 temporibus molestias placeat itaque laboriosam. Repellat magnam sequi voluptates ipsa impedit,
@@ -67,93 +68,80 @@ width: 163px;
 border: 2px solid #00B336;
 border-radius: 30px;float: right;" type="button">MORE DETAILS</button>
         </div>
-    <div style="flex: none;
+        <div style="flex: none;
 order: 6;
 align-self: stretch;
 flex-grow: 1;
 margin: 0px 0px;" class="table">
-        <table style="/* Safari 3-4, iOS 1-3.2, Android 1.6- */
+            <table style="/* Safari 3-4, iOS 1-3.2, Android 1.6- */
         -webkit-border-radius: 0 0 5px 5px;
         /* Firefox 1-3.6 */
         -moz-border-radius: 0 0 5px 5px;
         /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
         border-radius: 0 0 5px 5px;padding-top: 30px;@media only screen and (min-width:480px);width:100%;">
-            <tr>
-                <th style=" border: 1px;background-color: #F1F1F1;"></th>
-                <th style="background-color: #F1F1F1;">Standard<br>Discount</th>
-                <th style=" background-color: #F1F1F1;">Net New Logo<br>Deal</th>
-                <th style="background-color: #F1F1F1">TOTAL Deal<br> Registration</th>
-            </tr>
-            <tr>
-                <td style=" border: 1px solid;">Platinum</td>
-                <td style=" border: 1px solid black;text-align: center;">13%</td>
-                <td style=" border: 1px solid black;position: static;
-                width: 120.25px;
-                height: 20px;
-                display: flex;
-    justify-content: center;
-text-align: center;color: #00B336;">+3%</td>
-                <td style=" border: 1px solid;text-align: center;">41%</td>
-            </tr>
-            <tr>
-                <td style=" border: 1px solid;">Gold</td>
-                <td style=" border: 1px solid;text-align: center;">9%</td>
-                <td style=" border: 1px solid black;position: static;
-                width: 120.25px;
-                height: 20px;
-
-text-align: center;color: #00B336;">+4%</td>
-                <td style=" border: 1px solid;text-align: center;">37%</td>
-            <tr>
-                <td style=" border: 1px solid;">Silver</td>
-                <td style=" border: 1px solid;text-align: center;">5%</td>
-                <td style=" border: 1px solid black;position: static;
-                width: 120.25px;
-                height: 20px;
-text-align: center;color: #00B336;">+7%</td>
-                <td style=" border: 1px solid;text-align: center;">34%</td>
-            </tr>
-            </tr>
-        </table>
-    </div>
-    <div style="@media only screen and (min-width:480px)" class="body-second-header">
-        <h4 style="font-family: Tahoma; font-style: normal;font-size:16px; font-weight: bold;line-height: 20px;background: linear-gradient(90deg, #E0E0E0 0%, rgba(241, 241, 241, 0) 100%);
-        left: 15px;">EXCLUSIVELY FOR EMEA</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Voluptates, libero rerum laudantium nobis
-            temporibus molestias placeat itaque laboriosam. Repellat magnam sequi voluptates ipsa impedit,tempore praesentium! Debitis id fugit assumeda.</p>
-        <button style="font-family: Tahoma;
-        font-weight: bold;
-        font-size: 16px;
-        line-height: 20px;text-align: center;color: #00B336;
-width: 163px;
-border: 2px solid #00B336;
-border-radius: 30px;float: right;" type="button">REGISTER NOW</button>
-
-    </div>
-    <div style="@media only screen and (min-width:480px)" class="footer">
-        <div class="footer-header">
-            <h3>Question? Contact your Veeam representative.</h3>
+                <tr>
+                    <th style=" border: 1px;background-color: #F1F1F1;"></th>
+                    <th style="background-color: #F1F1F1;">Standard<br>Discount</th>
+                    <th style=" background-color: #F1F1F1;">Net New Logo<br>Deal</th>
+                    <th style="background-color: #F1F1F1">TOTAL Deal<br> Registration</th>
+                </tr>
+                <tr>
+                    <td style=" border: 1px solid;">Platinum</td>
+                    <td style=" border: 1px solid black;text-align: center;">13%</td>
+                    <td style=" border: 1px solid black;position: static;
+                width: 120.25px;height: 20px;display: flex;justify-content: center;text-align: center;color: #00B336;">+3%</td>
+                    <td style=" border: 1px solid;text-align: center;">41%</td>
+                </tr>
+                <tr>
+                    <td style=" border: 1px solid;">Gold</td>
+                    <td style=" border: 1px solid;text-align: center;">9%</td>
+                    <td style=" border: 1px solid black;position: static;
+                width: 120.25px;height: 20px;text-align: center;color: #00B336;">+4%</td>
+                    <td style=" border: 1px solid;text-align: center;">37%</td>
+                <tr>
+                    <td style=" border: 1px solid;">Silver</td>
+                    <td style=" border: 1px solid;text-align: center;">5%</td>
+                    <td style=" border: 1px solid black;position: static;
+                width: 120.25px;height: 20px;text-align: center;color: #00B336;">+7%</td>
+                    <td style=" border: 1px solid;text-align: center;">34%</td>
+                </tr>
+                </tr>
+            </table>
         </div>
-        <div style="@media only screen and (min-width:480px);width: 33.33%;" class="footer-body">
-            <p>Happy selling!</p>
-            <p>Veeam Team</p>
-            <h3>Special conditions may apply. Visit the web pages to learn more.</h3>
+        <div style="@media only screen and (min-width:480px)" class="body-second-header">
+            <h4 style="font-family: Tahoma; font-style: normal;font-size:16px; font-weight: bold;padding:20px;line-height: 20px;background: linear-gradient(90deg, #E0E0E0 0%, rgba(241, 241, 241, 241) 100%);left: 15px;">EXCLUSIVELY FOR EMEA</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Voluptates, libero rerum laudantium nobis
+                temporibus molestias placeat itaque laboriosam. Repellat magnam sequi voluptates ipsa impedit,tempore
+                praesentium! Debitis id fugit assumeda.</p>
+            <div style="padding-bottom: 30px;" class="button">
+                <button style="font-family: Tahoma;font-weight: bold;font-size: 16px;line-height: 20px;text-align: center;color: #00B336;width: 163px;border: 2px solid #00B336;border-radius: 30px;float: right;" type="button">REGISTER NOW</button>
+            </div>
         </div>
-        <div class="footer-social-icons">
-            <a href="#"><img src="https://ioana-becheru.imgbb.com/"></a>
-            <a href="#"><img src="https://ioana-becheru.imgbb.com/"></a>
-            <a href="#"><img src="https://ioana-becheru.imgbb.com/"></a>
-            <a href="#"><img src="https://ioana-becheru.imgbb.com/"></a>
-            <a href="#"><img src="https://ioana-becheru.imgbb.com/"></a>
-            <a href="#"><img src="https://ioana-becheru.imgbb.com/"></a>
+        <div style="@media only screen and (min-width:480px);background-color: #F1F1F1;" class="footer">
+            <div class="footer-header">
+                <h3 style="font-family: Tahoma;font-size: 10px;">Question? Contact your <span style="color:#00B336">Veeam representative. </span></h3>
+            </div>
+            <div style="@media only screen and (min-width:480px);" class="footer-body">
+                <p style="font-family: Tahoma;font-size: 10px;">Happy selling!</p>
+                <p style="font-family: Tahoma;font-size: 10px">Veeam Team</p>
+                <h3 style="font-family: Tahoma;font-size: 10px;">Special conditions may apply.<span style="color:#00B336">Visit the web pages to learn more.</span> </h3>
+            </div>
+            <div style="@media only screen and (min-width:480px);background-color: white;">
+                <div style="@media only screen and (min-width:480px);" class="footer-social-icons">
+                    <a href="#"><img src="https://i.ibb.co/2N4r2G6/footer-twiter.png"></a>
+                    <a href="#"><img src="https://i.ibb.co/9tkcWdj/footer-facebook.png"></a>
+                    <a href="#"><img src="https://i.ibb.co/pfPvmDM/footer-linkedin.png"></a>
+                    <a href="#"><img src="https://i.ibb.co/CWdR4k5/image.png"></a>
+                    <a href="#"><img src="https://i.ibb.co/yywqRK9/footer-youtube.png"></a>
+                    <a href="#"><img src="https://i.ibb.co/y8Z2Q5V/footer-v.png"></a>
+                </div>
+                <h6 style="@media only screen and (min-width:480px);font-family:Tahoma;font-size:10px;">
+                    Veeam respects your privacy. Review our online <span style="color:#00B336">Privacy Statement.</span>  <br>Linden Park, Lindenstr. 16,
+                    CH-6340 Baar, Switzerland | Phone: +41 41 766 71 31 2520 <br>Northwinds Parkway Suite 600
+                    Alpharetta, GA 30009 USA | Phone: +1 678 353 2140<br> Change your <span style="color:#00B336">subscription preferences or
+                    unsubscribe </span>from Veeam communications.</h6>
+            </div>
         </div>
-        <div>
-            <h6>Veeam respects your privacy. Review our online Privacy Statement. <br>Linden Park, Lindenstr. 16,
-                CH-6340 Baar, Switzerland | Phone: +41 41 766 71 31 2520 <br>Northwinds Parkway Suite 600
-                Alpharetta, GA 30009 USA | Phone: +1 678 353 2140<br> Change your subscription preferences or
-                unsubscribe from Veeam communications.</h6>
-        </div>
-    </div>
 </body>
 
 </html>
